--- a/index.html
+++ b/index.html
@@ -703,7 +703,7 @@
     <div class="visual">
       <div class="tree-wrap" id="treeWrap">
         <!-- Основная картинка ёлки: поменяйте путь при необходимости -->
-        <img id="treeImage" class="tree" src="D:\Отчеты\техноелка\tree4.svg" alt="Векторная ёлка" />
+        <img id="treeImage" class="tree" src="tree4.svg" alt="Векторная ёлка" />
 
         <!-- Лампы гирлянды - 12 лампочек (по месяцам) -->
         <!-- Январь -->
@@ -954,4 +954,5 @@ snowToys.forEach(toy => {
 });
 </script>
 </body>
+
 </html>
