--- a/index.html
+++ b/index.html
@@ -751,11 +751,11 @@
           <span class="emoji">❄️</span>
         </a>
 
-        <a class="toy" href="#" style="left:70%; top:67%; transform:translate(-50%,-50%)">
+        <a class="toy" href="5.html" style="left:70%; top:67%; transform:translate(-50%,-50%)">
           <span class="emoji">🎁</span>
         </a>
 
-        <a class="toy" href="#" style="left:38%; top:78%; transform:translate(-50%,-50%)">
+        <a class="toy" href="6.html" style="left:38%; top:78%; transform:translate(-50%,-50%)">
             <span class="emoji">🐎</span>
           </a>
       </div>
@@ -956,3 +956,4 @@ snowToys.forEach(toy => {
 </body>
 
 </html>
+
